--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Astronomy Club, IITK | Home ::  </title>
-<link rel="shortcut icon" href="images/title.png" type="image/png"/>
+<link rel="shortcut icon" href="title.png" type="image/png"/>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
