--- a/IITH.html
+++ b/IITH.html
@@ -4,9 +4,7 @@
     <meta charset="windows-1252">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Indian Institute of Technology Hyderabad">
- <meta name="author" content="Indian Institute of Technology Hyderabad">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<script type="text/javascript">
 			//   Change next line for your text msg.
@@ -39,10 +37,9 @@
 				colorTimer = window.setTimeout('colorize()', 200);
 			}
 		</script>
-		<!--<meta http-equiv="Refresh" content="10;URL=https://sites.google.com/view/h00">-->
 		
 	</head>
-	<body bgcolor="#333333" link="#cc6600" vlink="#cc6600" onload='colorize();'>
+	<!--body bgcolor="#333333" link="#cc6600" vlink="#cc6600" onload='colorize();'-->
 		<div id="text" style="font-size:large; font-family: 'arial', Courier, monospace; letter-spacing:normal; font-weight:bold; font-style:normal; text-align:center; padding-top:5px;">
 			<script>
 				for (var i=0; i<msg.length; i++){
@@ -54,7 +51,7 @@
 
     
 <title>Astronomy Club, IITH | Home ::  </title>
-<link rel="shortcut icon" href="images/nebula.jpg" type="image/jpg"/>
+<link rel="shortcut icon" href="nebula.jpg" type="image/jpg"/>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -84,7 +81,7 @@
 								<li><a href="faq.html">FAQs</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="contact.html">Contact</a></li>
-								<li><a href="presentations.html">Presentations</a></li>
+								<!--li><a href="presentations.html">Presentations</a></li-->
 								
 								<div class="clearfix"> </div>
 							</ul>
