--- a/IITH.html
+++ b/IITH.html
@@ -51,7 +51,7 @@
 
     
 <title>Astronomy Club, IITH | Home ::  </title>
-<link rel="shortcut icon" href="nebula.jpg" type="image/jpg"/>
+<link rel="shortcut icon" href="images/nebula.jpg" type="image/jpg"/>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -74,7 +74,7 @@
 						      <!-- Begin Logo -->
         <a class="navbar-brand" href="/">
             <!-- <img src="/assets/images/logo.png" alt="IIT Hyderabad" style="width:55%"> -->
-            <img src="/assets/images/horzlogolong.png" alt="IITH Logo">
+            <img src="images/horzlogolong.png" alt="IITH Logo">
 	    <ul class="cl-effect-1"-->
                                                                 <li class="active"><a href="index.html">Home</a></li>
 							        <li><a href="Latest.html">Latest</a><li>
