--- a/IITH.html
+++ b/IITH.html
@@ -75,8 +75,8 @@
 						      <!-- Begin Logo -->
         <a class="navbar-brand" href="#">
             
-            <img src="images/horzlogolong.png" alt="IITH Logo" width=50px>
-	    <ul class="cl-effect-1"-->
+            <img src="images/horzlogolong.png" alt="IITH Logo" width=65px>
+	                                                        <ul class="cl-effect-1">
                                                                 <li class="active"><a href="index.html">Home</a></li>
 							        <li><a href="Latest.html">Latest</a><li>
 								<li><a href="faq.html">FAQs</a></li>
