--- a/IITH.html
+++ b/IITH.html
@@ -99,7 +99,7 @@
 					</script>
 				<!-- script-for-nav -->
 				<div class="logo">
-					<a href="IITH.html"><img src="images/astronomy.jpeg" class="img-responsive" alt="" /></a>
+					<a href="IITH.html"><img src="images/astronomy.jpeg" class="img-responsive" alt=""width=2000px /></a>
 				</div>
 		</div>
 	</div>
